início do escopo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <body>
   
   <h1>Desafio Frases</h1>
+  <div id="frase" class="frase"> </div>
+  <button class="button btn btn-1" onClick="novafrase()"> <span>Gerar Frase</span></button>
 
   <script type="text/javascript" src=script.js></script>
 </body>
