--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
 </head>
 <body>
   
-  <h1>Desafio Frases</h1>
-  <div id="frase" class="frase"> </div>
-  <button class="button btn btn-1" onClick="novafrase()"> <span>Gerar Frase</span></button>
+  <section class="main">
+    <div class="box">
+    <h1>Frases Motivacionais</h1>
+    <div class="box-frase">
+      <div id="frase" class="frase"></div>
+    </div>
+    <button class="button" onClick="novafrase()"></button>
+    </div>
+  </section>
 
   <script type="text/javascript" src=script.js></script>
 </body>
